--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
